👷‍♂️ Move noir/SP1/risc0 verifiers to the hyle-verifiers crate

--- a/tools/cargo_tree_viewer.html
+++ b/tools/cargo_tree_viewer.html
@@ -5,12 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cargo Tree Viewer</title>
     <style>
+        p {
+            font-size: 1.0em;
+            font-family: sans-serif;
+        }
         ul {
             list-style-type: none;
-            padding-left: 20px;
+            padding-left: 25px;
         }
         li {
             cursor: pointer;
+            font-family: sans-serif;
+
+            -webkit-user-select: none; /* Safari */
+            -ms-user-select: none; /* IE 10 and IE 11 */
+            user-select: none; /* Standard syntax */
+        }
+        li:hover {
+            background-color: rgba(0, 0, 0, 0.03);
         }
         .hidden {
             display: none;
@@ -21,18 +33,19 @@
     <h1>Cargo Tree Viewer</h1>
     <div class="flex">
     <div>
-        <p>Run with <span style="font-family: monospace; border: 1px solid blue; border-radius: 4px; padding: 2px 6px">cargo tree -e no-dev --charset ascii</span> to get the tree structure.</p>
+        <p>Run with <span style="font-family: monospace; border: 1px solid blue; border-radius: 4px; padding: 2px 6px">cargo tree -e no-dev --charset ascii --prefix depth</span> to get the tree structure.</p>
         <textarea id="treeInput" rows="10" cols="80" placeholder="Paste your tree structure here"></textarea>
         <br>
         <button onclick="renderTree()">Render Tree</button>
     </div>
     <div>
-        <p>Run with <span style="font-family: monospace; border: 1px solid blue; border-radius: 4px; padding: 2px 6px">cargo +nightly build --timings=json -Z unstable-options</span> to get the build times.</p>
+        <p>Run with <span style="font-family: monospace; border: 1px solid blue; border-radius: 4px; padding: 2px 6px">cargo +nightly build --timings=json -Z unstable-options > timings.json</span> to get the build times.</p>
         <textarea id="buildTimes" rows="10" cols="80" placeholder="Paste your tree structure here"></textarea>
         <br>
         <button onclick="extractBuildTimes()">Extract build times</button>
     </div>
 </div>
+    <input type="checkbox" id="showDuplicates" checked onclick="renderTree()"><label for="showDuplicates">Show duplicates</label>
     <ul id="cargoTree"></ul>
     <script>
         function parseTree(treeText) {
@@ -40,13 +53,26 @@
             const root = { name: lines[0].trim(), children: [], duration: 0 };
             const stack = [root];
 
+            const highest_level_seen = {};
+            const crate_data = {};
+
             for (let i = 1; i < lines.length; i++) {
                 const line = lines[i].trim();
                 try {
-                    const node = { name: line.match(/^[\| `]*-- (.+ v[^ ]+).*/)[1], children: [] };
+                    const data = line.match(/^([0-9]+)(.+) v([^ ]+) ?(\([^)*]+\))?(\(\*\))?/);
+                    const node = {
+                        id: `${data[2]} v${data[3]}`,
+                        name: data[2] + ' v' + data[3],
+                        level: +data[1],
+                        children: [],
+                    };
 
-                    let level = (lines[i].lastIndexOf('|') + 1) || (lines[i].lastIndexOf('`') + 1);
-                    level = (level - 1) / 4 + 1;
+                    if (highest_level_seen?.[node.id] === undefined || highest_level_seen[node.id] > node.level)
+                        highest_level_seen[node.id] = node.level;
+                    if (crate_data[node.id] === undefined)
+                        crate_data[node.id] = node;
+
+                    let level = +data[1];
                     while (stack.length > level) stack.pop();
                     stack[stack.length - 1].children.push(node);
                     stack.push(node);
@@ -54,6 +80,27 @@
                     //console.error('Failed to parse line:', line);
                 }
             }
+
+            for (crate in crate_data) {
+                crate_data[crate].actual_children = crate_data[crate].children;
+            }
+            
+            // Filter the stack, removing any dependency that isn't at its highest level
+            const processStack = (node) => {
+                node.children = node.children.filter(child => {
+                    //console.log("Comparing for ", child.name, highest_level_seen[child.name][0], child.level);
+                    child.highest_level = highest_level_seen[child.name] === child.level;
+                    if (child.highest_level) {
+                        child.children = crate_data[child.id].actual_children;
+                        processStack(child);
+                    } else {
+                        child.children = [];
+                    }
+                    // For now keep everything we'll show duplicates.
+                    return true;
+                });
+            }
+            processStack(root);
 
             return root;
         }
@@ -64,16 +111,40 @@
             const totalRecursive = (node) => {
                 let total = 0;
                 node.children.forEach(child => total += totalRecursive(child));
-                return total + (node.duration || 0);
+                return total + (node.highest_level ? (node.duration || 1) : 0);
             }
             // Sort children in decreasing order of total items
             node.children.sort((a, b) => totalRecursive(b) - totalRecursive(a));
 
-            li.textContent = `- (${totalRecursive(node)}) ${node.name} (${node.duration}ms)`;
+            const formatDuration = (duration) => {
+                if (duration === undefined) return '??';
+                if (duration < 1) return `${duration.toFixed(2)}`;
+                return `${duration.toFixed(1)}`;
+            }
+
+            li.innerHTML = `- (Total: ${formatDuration(totalRecursive(node))}, self: ${formatDuration(node.duration)}s) <b>${node.name}</b>`;
+            //`- (${formatDuration(totalRecursive(node))}) ${node.name} (${formatDuration(node.duration)}s)`;
 
             if (node.children.length > 0) {
                 const ul = document.createElement('ul');
-                node.children.forEach(child => ul.appendChild(buildTree(child)));
+                const others = document.createElement('li');
+                others.innerText = `... and ${node.children.length - 5} more`;
+                const others_ul = document.createElement('ul');
+                others.addEventListener('click', e => {
+                    e.stopPropagation();
+                    others_ul.classList.toggle('hidden');
+                });
+                node.children.forEach((child, i) => {
+                    if (child.highest_level || document.getElementById('showDuplicates').checked)
+                        if (i < 5)
+                            ul.appendChild(buildTree(child));
+                        else
+                            others_ul.appendChild(buildTree(child));
+                });
+                if (others_ul.children.length > 0) {
+                    others.appendChild(others_ul);
+                    ul.appendChild(others);
+                }
                 li.appendChild(ul);
                 li.addEventListener('click', e => {
                     e.stopPropagation();
@@ -138,6 +209,7 @@
             const treeContainer = document.getElementById('cargoTree');
             treeContainer.innerHTML = '';
             treeContainer.appendChild(buildTree(parsedTree));
+            extractBuildTimes();
         }
     </script>
 </body>
