✨ Make LaneManager mode work correctly
- Fix issue in mempool where we wouldn't disseminate (as we're still signing)
- Fix processing of staking without Consensus in mempool
- Move processing of staking actions to Stake
- Fix TCP server peer IP to account for ports
- Fix ordering issue in log viewer

--- a/tools/test_log_viewer.html
+++ b/tools/test_log_viewer.html
@@ -145,7 +145,7 @@
                     //console.error("Error parsing line", line, e);
                 }
             });
-            return { nodeLogs, sortedTimestamps: Array.from(timestamps).sort() };
+            return { nodeLogs, sortedTimestamps: Array.from(timestamps).sort((a, b) => a - b) };
         }
 
         function renderLogs(nodeLogs, timestamps) {
